brat/test/golden/error/multilambda-id2.brat.golden
Error in test/golden/error/multilambda-id2.brat@FC {start = Pos {line = 2, col = 12}, end = Pos {line = 2, col = 13}}:
g = { 0 => ||succ(n) => | }
           ^

  Elab error "Noun required at this position"

